Add copywrites to html files

--- a/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/graphs/templates/ShowGraphsDialog.html
+++ b/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/graphs/templates/ShowGraphsDialog.html
@@ -1,4 +1,14 @@
 <div class="showGraphsDialog">
+<!--
+    Copyright (c) 2016, 2017 IBM Corporation and others.
+    All rights reserved. This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v1.0
+    which accompanies this distribution, and is available at
+    http://www.eclipse.org/legal/epl-v10.html
+   
+    Contributors:
+        IBM Corporation - initial API and implementation
+ 	-->
   <div id=${showGraphsDialogButtonId} class="showGraphsDialogButton">
     <div class="showGraphsDialogTableCell">
     <button id=${showHideButtonId} value=${showHideButtonId} class="showGraphs_closeButton" type="button" data-dojo-type="dijit/form/Button" data-dojo-props="iconClass:'showGraphs_closeButtonIcon', showLabel: false" data-dojo-attach-point="showHideButton" aria-label="${showHideButtonLabel}" title="${showHideButtonLabel}"><span style="display:none;">${showHideButtonLabel}</span></button>
