--- a/dev/com.ibm.ws.ui.tool.javaBatch/resources/WEB-CONTENT/jsBatch/widgets/templates/JavaBatchSearchPill.html
+++ b/dev/com.ibm.ws.ui.tool.javaBatch/resources/WEB-CONTENT/jsBatch/widgets/templates/JavaBatchSearchPill.html
@@ -1,7 +1,16 @@
 <div id="${id}_right-div"
 	class="searchPillRight searchPillRightNotSelected"
 	data-dojo-attach-point="searchPillRightDiv" data-dojo-attach-event="">
-
+<!--
+    Copyright (c) 2016 IBM Corporation and others.
+    All rights reserved. This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v1.0
+    which accompanies this distribution, and is available at
+    http://www.eclipse.org/legal/epl-v10.html
+   
+    Contributors:
+        IBM Corporation - initial API and implementation
+ 	-->
 	<div id="${id}_instanceState-input" class="searchPillInputAreaVisible"
 		tabindex="0" data-dojo-type="dijit/form/DropDownButton"
 		data-dojo-attach-point="resourceInstanceStateDropDown"
