--- a/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/graphs/templates/JVMThreadGraph.html
+++ b/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/graphs/templates/JVMThreadGraph.html
@@ -1,4 +1,14 @@
 <div class="statusGraph" id="${id}">
+<!--
+    Copyright (c) 2016 IBM Corporation and others.
+    All rights reserved. This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v1.0
+    which accompanies this distribution, and is available at
+    http://www.eclipse.org/legal/epl-v10.html
+   
+    Contributors:
+        IBM Corporation - initial API and implementation
+ 	-->
   <div class="statusGraphInfo displayGraph statusGraphNarrow">
     <div data-dojo-attach-point="actionButtonNode" data-dojo-type="dijit/layout/ContentPane" class="statusGraphActionButtonNode"></div>
     <div class="statusGraphTitle">
