--- a/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/graphs/templates/PerspectiveContainer.html
+++ b/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/graphs/templates/PerspectiveContainer.html
@@ -1,4 +1,14 @@
 <div id="${id}" style="width:100%;height:100%">
+<!--
+    Copyright (c) 2016 IBM Corporation and others.
+    All rights reserved. This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v1.0
+    which accompanies this distribution, and is available at
+    http://www.eclipse.org/legal/epl-v10.html
+   
+    Contributors:
+        IBM Corporation - initial API and implementation
+ 	-->
   <div id="${id}-Toolbar" data-dojo-type="dijit/layout/ContentPane" data-dojo-attach-point="toolbar" style="border-bottom:1px solid #bebebe">
   </div>
 
