--- a/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/graphs/templates/TimeSelector.html
+++ b/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/graphs/templates/TimeSelector.html
@@ -1,4 +1,14 @@
 <div id="${id}" class="graphTimeSelectorHide">
+<!--
+    Copyright (c) 2016, 2017 IBM Corporation and others.
+    All rights reserved. This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v1.0
+    which accompanies this distribution, and is available at
+    http://www.eclipse.org/legal/epl-v10.html
+   
+    Contributors:
+        IBM Corporation - initial API and implementation
+ 	-->
   <div class="graphTimeSelectorMinimisedView graphTimeSelectorView graphTimeSelectorHide" id="${idMinimisedView}" data-dojo-attach-point="minimizedViewPanel">
     <input type="text" class="graphTimeSelectorCollapsedTextBox graphTimeSelectorCollapsedSmallTextBox" data-dojo-attach-point="summaryDisplayNode" data-dojo-type="js/widgets/TextBox" />
   </div>
