--- a/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/templates/DashboardPane.html
+++ b/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/templates/DashboardPane.html
@@ -1,4 +1,14 @@
 <table class="container dashboard-table" role="presentation">
+<!--
+    Copyright (c) 2016 IBM Corporation and others.
+    All rights reserved. This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v1.0
+    which accompanies this distribution, and is available at
+    http://www.eclipse.org/legal/epl-v10.html
+   
+    Contributors:
+        IBM Corporation - initial API and implementation
+ 	-->
 	<tr>
 		<td class="dashboard-row-header" tabindex="0">
   			<div class="resource-icon" id="${dashboardIconId}" data-dojo-attach-point="iconTypeNode"></div>
