--- a/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/templates/MenuItemNoIcon.html
+++ b/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/templates/MenuItemNoIcon.html
@@ -1,4 +1,14 @@
 <tr class="dijitReset" data-dojo-attach-point="focusNode" role="menuitem" tabIndex="-1">
+<!--
+    Copyright (c) 2016 IBM Corporation and others.
+    All rights reserved. This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v1.0
+    which accompanies this distribution, and is available at
+    http://www.eclipse.org/legal/epl-v10.html
+   
+    Contributors:
+        IBM Corporation - initial API and implementation
+ 	-->
 	<td style="padding-left:20px;" class="dijitReset dijitMenuItemLabel" colspan="3" data-dojo-attach-point="containerNode,textDirNode"
 		role="presentation"></td>
 	<td class="dijitReset dijitMenuItemAccelKey" style="display: none" data-dojo-attach-point="accelKeyNode"></td>
