--- a/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/templates/ObjectViewHeaderPane.html
+++ b/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/templates/ObjectViewHeaderPane.html
@@ -1,5 +1,14 @@
 <div class="objectViewHeaderPane">
-
+<!--
+    Copyright (c) 2016, 2019 IBM Corporation and others.
+    All rights reserved. This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v1.0
+    which accompanies this distribution, and is available at
+    http://www.eclipse.org/legal/epl-v10.html
+   
+    Contributors:
+        IBM Corporation - initial API and implementation
+ 	-->
   <div id="${resourceId}-Icon" class="${resourceIconClass}" style="display: inline-block; vertical-align: top; background-repeat: no-repeat;"
   data-dojo-attach-point="iconNode"
   ></div>
