--- a/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/templates/ServerCard.html
+++ b/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/templates/ServerCard.html
@@ -1,5 +1,14 @@
 <div class="cardInner">
-
+<!--
+    Copyright (c) 2016, 2017 IBM Corporation and others.
+    All rights reserved. This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v1.0
+    which accompanies this distribution, and is available at
+    http://www.eclipse.org/legal/epl-v10.html
+   
+    Contributors:
+        IBM Corporation - initial API and implementation
+ 	-->
     <div class="cardTop">
         <div data-dojo-type="dijit/layout/ContentPane" baseClass="cardIcon" id="${cardIconDivId}" data-dojo-attach-point="iconCp"></div>
         <div class="cardTopRight">
