--- a/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/templates/SetAttributesDialog.html
+++ b/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/templates/SetAttributesDialog.html
@@ -1,5 +1,14 @@
 <div title="${title}" class="setAttrsDlg" role="dialog" aria-labelledby="${id}_title">
-  
+  <!--
+    Copyright (c) 2016 IBM Corporation and others.
+    All rights reserved. This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v1.0
+    which accompanies this distribution, and is available at
+    http://www.eclipse.org/legal/epl-v10.html
+   
+    Contributors:
+        IBM Corporation - initial API and implementation
+ 	-->
 	<div data-dojo-attach-point="titleBar" class="dijitDialogTitleBar">
 		<span data-dojo-attach-point="titleNode" class="dijitDialogTitle" id="${id}_title"
 				role="heading"></span>
