--- a/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/templates/SideTabButton.html
+++ b/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/templates/SideTabButton.html
@@ -1,4 +1,14 @@
 <span class="dijit dijitReset dijitInline" role="presentation">
+<!--
+    Copyright (c) 2016 IBM Corporation and others.
+    All rights reserved. This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v1.0
+    which accompanies this distribution, and is available at
+    http://www.eclipse.org/legal/epl-v10.html
+   
+    Contributors:
+        IBM Corporation - initial API and implementation
+ 	-->
     <span class="dijitReset dijitInline dijitButtonNode"
         data-dojo-attach-event="ondijitclick:__onClick" role="presentation">
         <span class="dijitReset dijitStretch dijitButtonContents"
