--- a/dev/com.ibm.ws.ui.tool.javaBatch/resources/WEB-CONTENT/jsBatch/widgets/templates/ExecutionOverviewPane.html
+++ b/dev/com.ibm.ws.ui.tool.javaBatch/resources/WEB-CONTENT/jsBatch/widgets/templates/ExecutionOverviewPane.html
@@ -1,5 +1,14 @@
 <div class="executionDetailHeaderPane">
-
+<!--
+    Copyright (c) 2016 IBM Corporation and others.
+    All rights reserved. This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v1.0
+    which accompanies this distribution, and is available at
+    http://www.eclipse.org/legal/epl-v10.html
+   
+    Contributors:
+        IBM Corporation - initial API and implementation
+ 	-->
   <div class="executionIdentitySection" tabindex=0>
       <!-- Execution Identification Line -->
       <div class="executionIdentityLine">
