--- a/dev/com.ibm.ws.ui.tool.javaBatch/resources/WEB-CONTENT/jsBatch/widgets/templates/ExecutionTitlePane.html
+++ b/dev/com.ibm.ws.ui.tool.javaBatch/resources/WEB-CONTENT/jsBatch/widgets/templates/ExecutionTitlePane.html
@@ -1,4 +1,14 @@
 <div class='executionTitlePane'>
+<!--
+    Copyright (c) 2016 IBM Corporation and others.
+    All rights reserved. This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v1.0
+    which accompanies this distribution, and is available at
+    http://www.eclipse.org/legal/epl-v10.html
+   
+    Contributors:
+        IBM Corporation - initial API and implementation
+ 	-->
     <div data-dojo-attach-event="ondijitclick:_onTitleClick, onkeydown:_onTitleKey"
             class="dijitTitlePaneTitle" data-dojo-attach-point="titleBarNode" id="${id}_titleBarNode">
         <div class="dijitTitlePaneTitleFocus" data-dojo-attach-point="focusNode">
