--- a/dev/com.ibm.ws.ui/resources/WEB-CONTENT/js/widgets/templates/LibertyPrefs.html
+++ b/dev/com.ibm.ws.ui/resources/WEB-CONTENT/js/widgets/templates/LibertyPrefs.html
@@ -1,4 +1,14 @@
 <div>
+<!--
+    Copyright (c) 2016, 2019 IBM Corporation and others.
+    All rights reserved. This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v1.0
+    which accompanies this distribution, and is available at
+    http://www.eclipse.org/legal/epl-v10.html
+   
+    Contributors:
+        IBM Corporation - initial API and implementation
+ 	-->
 <div data-dojo-type="dojox/mobile/FixedSplitter">
 
 <div data-dojo-type="dojox/mobile/Container" style="top:85px" class="profile-left-panel">
