--- a/dev/com.ibm.ws.ui/resources/WEB-CONTENT/js/widgets/templates/ToolDetails.html
+++ b/dev/com.ibm.ws.ui/resources/WEB-CONTENT/js/widgets/templates/ToolDetails.html
@@ -1,5 +1,15 @@
 
 	<div class="tool-details-container">
+	<!--
+    Copyright (c) 2016 IBM Corporation and others.
+    All rights reserved. This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v1.0
+    which accompanies this distribution, and is available at
+    http://www.eclipse.org/legal/epl-v10.html
+   
+    Contributors:
+        IBM Corporation - initial API and implementation
+ 	-->
 		<div class="summary-wrap">
 			<div class="summary-tool-icon">
 				<span><img data-dojo-attach-point="iconField"  /></span>
