--- a/dev/com.ibm.ws.ui/resources/WEB-CONTENT/js/widgets/templates/messageDialog.html
+++ b/dev/com.ibm.ws.ui/resources/WEB-CONTENT/js/widgets/templates/messageDialog.html
@@ -1,5 +1,14 @@
 <div>
-  
+  <!--
+    Copyright (c) 2016, 2017 IBM Corporation and others.
+    All rights reserved. This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v1.0
+    which accompanies this distribution, and is available at
+    http://www.eclipse.org/legal/epl-v10.html
+   
+    Contributors:
+        IBM Corporation - initial API and implementation
+ 	-->
   <div class="dijitDialogPaneContentArea">
     <div class="messageDialogContent" style="display: block;">
       <span class="messageDialogIcon" style="display: table-cell; vertical-align:middle;">
