Move html copywrite to follow other convention of after the first stanza

--- a/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/templates/BreakAffinity.html
+++ b/dev/com.ibm.ws.ui.tool.explore/resources/WEB-CONTENT/jsExplore/widgets/templates/BreakAffinity.html
@@ -1,3 +1,4 @@
+<div style="display:table; width:100%;">
 <!--
     Copyright (c) 2016 IBM Corporation and others.
     All rights reserved. This program and the accompanying materials
@@ -8,7 +9,7 @@
     Contributors:
         IBM Corporation - initial API and implementation
  	-->
-<div style="display:table; width:100%;"><div style="display:table-cell; vertical-align:middle; width:calc(100% - 42px);">${question}</div><div 
-	style="display:table-cell; vertical-align:top; float:right;"><input class="checkboxToggleButton" 
-	type="checkbox" name="breakAffinityToggleButton"  
-	id="breakAffinityToggleButton"><label for="breakAffinityToggleButton" id="breakAffinityToggleLabel">${question}</label></div></div>
+	<div style="display:table-cell; vertical-align:middle; width:calc(100% - 42px);">${question}</div><div 
+		style="display:table-cell; vertical-align:top; float:right;"><input class="checkboxToggleButton" 
+		type="checkbox" name="breakAffinityToggleButton"  
+		id="breakAffinityToggleButton"><label for="breakAffinityToggleButton" id="breakAffinityToggleLabel">${question}</label></div></div>
